Initialize the codebase from JDT.LS for prototype.